--- a/Rathaus.html
+++ b/Rathaus.html
@@ -11,14 +11,14 @@
     <img src="./Rathaus.jpeg"width=450px height="250px" align="right">
     <span class ="ueberschrift">Wissenswertes zur Verwaltung & Politik</span> <br>
   <span class ="ueberschrift2">Auf einen Blick - Wichtige Kontakte</span> <br>
-  RathausRathausplatz 3665760 EschbornTelefon: 06196/490-0Mail: info@eschborn.de + I3Empfang: Montag, Dienstag, Donnerstag 8 - 16 Uhr und Mittwoch 8 - 18 Uhr, Freitag 8 - 12 Uhr Dienstleistungszentrum 
-  (Bauhof) Graf-Zeppelin-Straße 5-765760 Eschborn Telefon: 06196 - 490-501Mail: bauen@eschborn.de Öffnungszeiten: Montag-Freitag 08.00 - 12.00 Uhr, Mittwoch 15.00 - 16.30 Uhr Annahme Grünabfälle: Montag,
-   Dienstag und Donnerstag 7:30-15:30, Mittwoch 7:30-17:30 und Freitag 7:30-12:00 <a href="https://eschborn.mein-abfallkalender.online">Abfallkalender</a> Standesamt E-Mail: standesamt@eschborn.deTelefon: 
-   06196/490-205. <br>
-   <span class ="ueberschrift3">Bürgerservice</span> 
-   Bürgerbüro (Services zum Einwohnermeldewesens) Unterortstraße 27A E-Mail: buergerbuero@eschborn.deTelefon: 06196/490-999 Öffnungszeiten BürgerbüroMontag: 8-12 Uhr und 13-16 UhrDienstag: 8-12 UhrMittwoch: 8-12 Uhr 
-   und 14-18 UhrDonnerstag: 8-12 Uhr Freitag: 8-12 UhrJeden 1. Samstag im Monat: 9-13 UhrÖffnungszeiten Verwaltungsstelle NiederhöchstadtDienstag: 8 bis 13 UhrDonnerstag: 10 bis 15 UhrÖffnungszeiten 
-   Verwaltungsstelle Niederhöchstadt: Dienstag 8 - 13 Uhr und Donnerstag 10 - 15 UhrDienstleistungen & Services der Stadt/Behörden sind über den A-Z Katalog zu finden:Hier klicken bitte!  Zuständigkeiten der
+  Rathaus Rathausplatz 3665760 Eschborn Telefon: 06196/490-0Mail: <a href= "mailto: info@eschborn.de">info@eschborn.de</a> + I3 Empfang: Montag, Dienstag, Donnerstag 8 - 16 Uhr und Mittwoch 8 - 18 Uhr, Freitag 8 - 12 Uhr Dienstleistungszentrum 
+  (Bauhof) Graf-Zeppelin-Straße 5-765760 Eschborn Telefon: 06196 - 490-501 Mail: <a href= "mailto: bauen@eschborn.de">bauen@eschborn.de</a> Öffnungszeiten: Montag-Freitag 08.00 - 12.00 Uhr, Mittwoch 15.00 - 16.30 Uhr Annahme Grünabfälle: Montag,
+   Dienstag und Donnerstag 7:30-15:30, Mittwoch 7:30-17:30 und Freitag 7:30-12:00 <a href="https://eschborn.mein-abfallkalender.online">Abfallkalender</a> Standesamt E-Mail: 
+   <a href= "mailto: standesamt@eschborn.de">standesamt@eschborn.de</a> Telefon: 06196/490-205. <br>
+   <span class ="ueberschrift3">Bürgerservice</span><br>
+   Bürgerbüro (Services zum Einwohnermeldewesens) Unterortstraße 27A E-Mail: <a href= "mailto: buergerbuero@eschborn.de">buergerbuero@eschborn.de</a>Telefon: 06196/490-999 Öffnungszeiten BürgerbüroMontag: 8-12 Uhr und 13-16 Uhr Dienstag: 8-12 Uhr Mittwoch: 8-12 Uhr 
+   und 14-18 Uhr Donnerstag: 8-12 Uhr Freitag: 8-12 Uhr Jeden 1. Samstag im Monat: 9-13 Uhr Öffnungszeiten Verwaltungsstelle NiederhöchstadtDienstag: 8 bis 13 Uhr Donnerstag: 10 bis 15 Uhr Öffnungszeiten 
+   Verwaltungsstelle Niederhöchstadt: Dienstag 8 - 13 Uhr und Donnerstag 10 - 15 Uhr Dienstleistungen & Services der Stadt/Behörden sind über den A-Z Katalog zu finden: Hier klicken bitte! Zuständigkeiten der
     Fachdienste Servicekatalog A bis Z
     <hr>
     <img src="./Rathaus2.jpg"width=450px height="250px" align="left">
