--- a/Eschborn.html
+++ b/Eschborn.html
@@ -12,18 +12,24 @@
 <body><div>
     <u><center><h1>Meine Stadt Eschborn</h1></center></u> <br> 
     <img id="Bild1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/FRAEsch.jpg/1200px-FRAEsch.jpg"width=500px height="300px" align="right">
-    <img src="./Eschborn2.png"width=400px height="400px" align="left">
+    <img src="./Eschborn2.png"width=400px height=400px align="left">
 <center>Herzlich willkommen bei der Stadt Eschborn! <br>
     Die offizielle Webseite mit Informationen rund um das Leben in Eschborn für Einheimische, Neubürger, Gäste und Gewerbetreibende.<br><br>
    <span class="ueberschrift">Aktuelle Themen</span><br>
     Veranstaltungen : Konzerte, Theater, Lesungen - Alle Events im <a href="https://www.eschborn.de/stadt-kultur-und-tourismusinformationen/veranstaltungskalender">Veranstaltungskalender</a> 
     Infos zur Buntestagswahl 2025: Voraussichtlicher Wahltermine am 23. Februar 2025. In Kürze erfahren Sie hier mehr. Regionaltangente West: Neue Direktverbindungen werden geschafft und Eschborn
-    ist dabei im Planfeststellungsabschnitt Nord. Neubau Wiesenbad: Ein neues 50m langes Indoor-Schwimmbecken entsteht.</center>
+    ist dabei im Planfeststellungsabschnitt Nord. Neubau Wiesenbad: Ein neues 50m langes Indoor-Schwimmbecken entsteht. <br> <span class="ueberschrift2">Konatkt</span><br>
+ </a></center>
+ Habt ihr auf unserer website nicht das gefunden, wonach ihr geschaut habt? Kein problem - sprecht <br> uns an und wir geben weiter Hinweise! Lasst uns wissen,  welche Services fehlen, welche verbessert <br> werden 
+ können 
+ und was neu gestalten werden kann! Stadt Eschborn Tel. 016196 - 410 999 <br> <a href= "mailto:kontakt@eschborn.de">kontakt@eschborn.de
 </div>
     <hr>
    <a href="Stadtportrait.html">
     <button style="color: black; height: 150px; width: 300px; font-size: x-large;">Stadtportrait </button></a>
     <a href="Rathaus.html">
-    <button style="color: black; height: 150px; width: 300px; font-size: x-large;">Rathaus</button>
+    <button style="color: black; height: 150px; width: 300px; font-size: x-large;">Rathaus</button></a>
+    <a href="Leben.html">
+    <button style="color: black; height: 150px; width: 300px; font-size: x-large;">Leben</button></a>
 </body>
 </html>
