--- a/Leben.html
+++ b/Leben.html
@@ -29,15 +29,28 @@
     ältere Menschen. Das Leben dieser menschen zu gestalten ist uns als Stadt sehr wichtig und daher bieten wir enstprechende Angebote an. <br> 
     <a href="https://www.eschborn.de/stadt-kultur-und-tourismusinformationen/veranstaltungskalender">Kulturelle Veranstaltungen für Senioren</a>
     <a href="https://www.eschborn.de/leben-in-eschborn/gesellschaft-soziales-familie/senioren/seniorenberatung"> Altenhilfekoordination und Altenplanung</a>
-    Menschen mit Behinderung <br> Eschborn möchte ein inklusives Leben ermöglichen. Unsere Ansprechpartner helfen mit Beratung und weiterführenden Hiweisen: Telefon: 06196/490-000 Email:
+ <br> Eschborn möchte ein inklusives Leben ermöglichen. Unsere Ansprechpartner helfen mit Beratung und weiterführenden Hiweisen: Telefon: 06196/490-000 Email:
     <a href= "mailto: senioren@eschborn.de">senioren@eschborn.de</a> <br>
     Migration & Integration Integration wird als ein gesamtgesellschaftlicher Prozess verstanden, der das Zusammenleben aller Bürger in Eschborn in gegenseitigem Respekt und Wertschätzung <br> ermöglicht. Menschen, 
     die aus dem In- und Ausland nach Eschbron kommen, sollen die Möglichkeit bekommen, am Stadtleben teilzuhaben. Wir bieten daher Informationen und Dienste zu <br> folgenden Themen an Ukraine-Hilfe, 
     Flüchtiligsarbeitskreis, Ausländerbeirat, Spreachangebote und viles mehr. Für weitere Informationen klickt bitte  
     <a href="https://www.eschborn.de/leben-in-eschborn/gesellschaft-soziales-familie/mitbuerger-auslaendischer-herkunft">hier</a> <br>
     <span class ="ueberschrift4">Wohnen, Planen & Bauen</span>  <br>
-     
-    <hr>
+    In den zwei Stadteilen Eschborn und Niederhöchstadt kann man Fachwerkhäuser und auch moderne Wohngebäude vorfinden. Auch im Gewerbegebiet Eschborn-Süd mit den modernen Büro- <br>gebäuden kann verfolgt werden,
+    wie sich die Stadt im Laufe der letzten Jahre der architektonischen Entwicklung angepasst hast. Eschborn ist deshalb so beliebt, weil zuzüglich auch noch die <br> Nähe zum Taunus und zum Grünen im Generellen sie
+    so lebenswert macht. Daher wohnen viele Menschen und weitere zieht es nach Eschborn an.Bebauungspläne und Bodenrichtwerte der Stadt <br>Eschborn: Link zu den Bebauungsplänen findest du 
+    <a href="https://www.eschborn.de/wirtschaft/publikationen-downloads/bebauungsplaene-bodenrichtwerte"> hier</a>  
+    Bauprojekte:Regionaltangente West: Die RTW ist eine Regionalstadtbahn-Linie im S-Bahnnetz des Rhein-Main-Gebietes. Der Vorteil <br> des Vorhabens ist, dass tangentiale Verbindungen zwischen den Linien geschafft
+    werden. So entfällt das Umsteigen in Frankfurt und Reisezeiten werden verkürzt.Neubau Wiesenbad: Das <br>Schimmbad Eschborner wird um Indoor-Becken mit 50 m Länge erweitert. <br>
+    <span class ="ueberschrift5">Umwelt & Klima</span>  <br>
+    Das 2014 verabschiedete Integrierte kommunale Klimaschutzkonzept ist Grundlage einer klimafreundlicheren und nachhaltigeren wirtschaftlichen Entwicklung der Stadt und hat dazu <br> geführt, diese Ziele in den 
+    Zuständigkeitsbereichen der Verwaltung festzuhalten. Damit dies auch umgesetzt wird, wurde die Position des Klimaschutzmanager geschaffen. <br>
+    <span class ="ueberschrift6">Gesundheit</span>  <br> 
+    Du benötigst einen Arzt oder möchtest wissen, wo sich die Apotheken in eschborn befinden? Ein Arztverzeichnis ist<a href="https://www.gelbeseiten.de/branchen/arzt/eschborn%20taunus"> hier</a>
+    Die Eschborner Apotheken sind <a href="https://www.gelbeseiten.de/branchen/apotheke/eschborn%20taunus"> hier gelistet </a> 
+    . Das zuständige <br> Gesundheitsamt befindet sich in Hofheim.  Tel: 06192 201-0 Fax: 06192 201-1731 E-Mail: <a href= "mailto: gesundheitsamt@mtk.org">gesundheitsamt@mtk.org</a>
+    Weitere hilfreiche Adresse für deine Gesundheit sind hier hinterlegt: <br> <a href="https://www.gelbeseiten.de/branchen/physiotherapie/eschborn%20taunus"> Physiotherapien</a> 
+    <a href="https://www.gelbeseiten.de/branchen/krankenpflege/eschborn%20taunus"> Krankenpflege</a>  
     <img src="./leben2.jpg" width=500px height=250px align="right">
     
 </body>
