small re-factor

--- a/Erleben.html
+++ b/Erleben.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simons Eschborn Erleben</title>
     <link href="erlebenStyle.css" rel="stylesheet">
 </head>
 <body>
     <body><u><center><h1>Erleben</h1></center></u> <br>
-    <span class ="ueberschrift1">Freizeit in Eschborn genießen!</span> <br>
+    <span class ="ueberschrift0">Freizeit in Eschborn genießen!</span> <br><br>
     <img src="./Erleben1.png"width=300px height=300px align="left">
-    <span class ="ueberschrift2">Veranstaltungen</span> <br>
+    <span class ="ueberschrift1">Veranstaltungen</span> <br>
     Echborn bietet Veranstltungen rund um das gesamte Jahr an. Die genauen Daten sind im Veranstlatungkalender enthalten
-    <a href= "https://www.eschborn.de/stadt-kultur-und-tourismusinformationen/veranstaltungskalender"> Link zum Veranstlatungskalender</a> <br>
-    <span class ="ueberschrift3">Sport & Freizeit</span> <br>
+    <a href= "https://www.eschborn.de/stadt-kultur-und-tourismusinformationen/veranstaltungskalender"> Link zum Veranstlatungskalender</a> <br><br>
+    <span class ="ueberschrift1">Sport & Freizeit</span> <br>
     Eschborn bietet ein breiten Spektrum an Vereinen und Möglichkeiten an, in denen man Sport machen kann: <a href= "https://tv-eschborn.de/"> Turnverein Eschborn 1888 e.V.</a>
     <a href= "https://www.tura-ndh.de"> Turn- und Rasensportverein Niederhöchstadt 1893. e. V.</a>  
     Weitere Sportangebote sind Eschathlon (in der Regel im Juni), Radrennen Rund um Frankfurt und Eschborn
@@ -22,8 +22,8 @@
     Für Kinder verfügt Echborn über viele kleine in den jeweiligen Gebiten verteilte Soielpltzäe. Das Highlight ist der Traktorspielplatz am Westerbach. Dieser Spielpltz verfügt über unterschiedliche Bereiche, 
     so dass Kinder unterschiedlichen Altern, ja sogar Erwachsene etwas für sich entdecken können. Es gibt Tischtennisplatten, Ausdauer-Sportgeräte und auch eine öffentliche Toilette. Mittelpunkt ist der rote Traktor.
     Eschborn verfügt auch in den Grünanlagen über jeweilige Grillplätze sowie eine Grillhütte, die bei der Stadt gemietet werden kann. Man kann sich über folgenden Kontakt zur anmelden: 
-    <a href= "mailto: belegung@eschborn.de ">belegung@eschborn.de</a> Tel. 06196 490-234 <br>
-    <span class ="ueberschrift4">Kultur & Attraktionen</span> <br>
+    <a href= "mailto: belegung@eschborn.de ">belegung@eschborn.de</a> Tel. 06196 490-234 <br><br>
+    <span class ="ueberschrift1">Kultur & Attraktionen</span> <br>
     In Eschborn gibt es viele wiederkehrende Veranstlatung auf die sich unsere Bürger und Gäste freuen. Hier einige Highlights: Summertime: Jeden Sommer findet für 2 Monate jede Woche ein kostenloses
     Open-Air Konzert statt , das sich im Löaufe der Jahre zu einem Klassiker nicht nur für Eschborn sondern für die Umgebung auch entwicklet hat. Niederhöchstätter Markt: Alle 2 Jahre (gerade Zahlen)
     gibt es in der Niderhöchstätter Altsadt für ein Wochende eine wundervolle Marktaltmosphäre. Eschborner Weihnachtsmarkt: Findet immer am 2. Advent statt. Niederhöchstätter Weihnachtsmarkt am Montgeronplatz:
@@ -32,8 +32,8 @@
     einen Veranstlatungsort in dem Kleinkunst, Konzerte, Kino und Kabarett angeboten werden. Die laufenden Events sind hier erwähnt: <a href= "https://eschborn-k.de/"> https://eschborn-k.de/</a>
     Einige Sehenswürdigkeiten, die Eschborn so attraktiv machen sind auch: SkulpturenparkSeit 2010 werden in Eschborn und Niederhöchstadt in einer großzügig gestalteten Parkanlage Kunstwerke stilvoll platziert. 
     Hier finden zahlreiche kulturelle Veranstaltungen und Ausstellungen statt.Stolpersteine Auch in Eschborn befinden sich vier Stolpersteine ein Projekt, das an diejenigen Menschen erinnert, die im 
-    Nationalsozialismus verfolgt und ermordet wurden. Weitere Details <a href= "https://www.stolpersteine.eu/">hier</a> 
-    <span class ="ueberschrift5">Tourismus</span> <br>
+    Nationalsozialismus verfolgt und ermordet wurden. Weitere Details <a href= "https://www.stolpersteine.eu/">hier</a><br><br>
+    <span class ="ueberschrift1">Tourismus</span> <br>
     Eschborn bietet unterschiedliche Übernachtungsmöglichkeiten an, je nacdem, ob man in familiärer Atmosphäre die Stadt und die Umgebung erkunschaften will und nah an den S-Bahn-Anschlüssen sein Gastronomie Eschborn
     kulinarische Vielfältigkeit spiegelt sich in den Restaurants wieder. Hier eine kleine Auswahl: Italienische Küche: Mama Rosa, Lucania, A Tavola da Carmelo etc. Indisch: Crown of India Kroatisch: Westerbachhhalle, 
     Dalmatia Deutsch: Apfelwein Müller Böhmisch: Bauernschänke Koreanisch: MoMo, Sushi Maru
