--- a/Eschborn.html
+++ b/Eschborn.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simons Eschborn Webseite</title>
 <link href="style.css" rel="stylesheet">
 
 
@@ -18,7 +18,7 @@
    <span class="ueberschrift">Aktuelle Themen</span><br>
     Veranstaltungen : Konzerte, Theater, Lesungen - Alle Events im <a href="https://www.eschborn.de/stadt-kultur-und-tourismusinformationen/veranstaltungskalender">Veranstaltungskalender</a> 
     Infos zur Buntestagswahl 2025: Voraussichtlicher Wahltermine am 23. Februar 2025. In Kürze erfahren Sie hier mehr. Regionaltangente West: Neue Direktverbindungen werden geschafft und Eschborn
-    ist dabei im Planfeststellungsabschnitt Nord. Neubau Wiesenbad: Ein neues 50m langes Indoor-Schwimmbecken entsteht. <br> <span class="ueberschrift2">Konatkt</span><br>
+    ist dabei im Planfeststellungsabschnitt Nord. Neubau Wiesenbad: Ein neues 50m langes Indoor-Schwimmbecken entsteht. <br> <span class="ueberschrift">Konatkt</span><br>
  </a></center>
  Habt ihr auf unserer website nicht das gefunden, wonach ihr geschaut habt? Kein problem - sprecht <br> uns an und wir geben weiter Hinweise! Lasst uns wissen,  welche Services fehlen, welche verbessert <br> werden 
  können 
