--- a/Leben.html
+++ b/Leben.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simons Eschborn Leben</title>
     <link href="styleLeben.css" rel="stylesheet">
 </head>
 <body><u><center><h1>Leben</h1></center></u> <br>
-    <span class ="ueberschrift1">Gestaltungsmöglichkeiten des Lebens in Eschborn</span> <br>
+    <span class ="ueberschrift0">Gestaltungsmöglichkeiten des Lebens in Eschborn</span> <br><br>
     <img src="./leben1.jpg" width=500px height=250px align="right">
-    <span class ="ueberschrift2">Bildung</span> <br>
+    <span class ="ueberschrift1">Bildung</span> <br>
     Eschborner Kinder können einer der insgesamt 3 Grundschulen besuchen: Hartmutschule Pestalozzistraße 7-1165760 EschbornTelefon: 06196/95 40 950 Westerbachschule Georg-Büchner-Straße 1865760 
     Eschborn  Telefon: 06173/319610 Süd-West Schule Berliner Straße 27-29 65760 Eschborn Telefon: 06196-92/75 78 60. Im weiterführenden Bereich gibt es mit der Heinrich-von-Kleist-Schule eine kooperative
     Gesamtschule mit gymnasialer Oberstufe. Heinrich-von-Kleist-Schule Dörnweg 53 65760 Eschborn elefon: 06196/95700. Weiterbildung Die Musikschule Taunus bietet jungen Menschen sowie Erwachsenen eine große Auswahl 
@@ -17,8 +17,8 @@
     über insgesamt 2 Stadbüchereien, eine in Eschborn und eine in Niderhöchstadt. In beiden Büchereien können diverse Medien kostenlos ausgeliehen werden. Das kann man zu folgenden Öffnungszeiten tun: Stadtbücherei 
     Eschborn Rathausplatz 36 65760 Eschborn Tel.: 06196 - 490 256 <a href= "mailto: stadtbuecherei@eschborn.de">stadtbuecherei@eschborn.de</a>  Öffnungszeiten: Dienstag 15-19 Uhr, Mittwoch 10-14 Uhr, Donnerstag 15-19 Uhr, Samstag 10-13 Uhr Stadtbücherei 
     Niederhöchstadt Steinbacher Straße 23 65760 Eschborn Telefon: 06196/490-240 <a href= "mailto: stadtbuecherei-ndh@eschborn.de">stadtbuecherei-ndh@eschborn.de</a> Öffnungszeiten: Dienstag 11-13 Uhr, Mittwoch 16-19 
-    Uhr, Freitag 16-18 Uhr, Samstag 10-13 Uhr. <br>
-    <span class ="ueberschrift3">Soziales & Gesellschaft</span>  <br>
+    Uhr, Freitag 16-18 Uhr, Samstag 10-13 Uhr. <br><br>
+    <span class ="ueberschrift1">Soziales & Gesellschaft</span>  <br>
     Kinder, Jugend & Familie Eschborn er Kinder genießen vielfältige Möglichkeiten der Kinderbetreuung. Kinderbetreuung unter 3 JahrenBitte hier klicken um bei sich den jeweiligen Anbietern 
     <a href="https://www.schuelli.care/https://zwergenburg-ev.de/http://terminal-for-kids.de/Kindertagesstätten">anzumelden</a> : (3-6 Jahren) EschbornSchulbezirk Grundschule Süd-West: Hort Berliner Straße 
     Bismarckstraße (Kita)Bremer Straße (Kita) Süd-West (Kita) Schulbezirk Hartmutschule: Dörnweg (Altersmischung) Odenwaldstraße (Altersmischung) Ritterhof (Kita) Schulkinderhaus Hartmutschule Niederhöchstadt 
@@ -34,18 +34,18 @@
     Migration & Integration Integration wird als ein gesamtgesellschaftlicher Prozess verstanden, der das Zusammenleben aller Bürger in Eschborn in gegenseitigem Respekt und Wertschätzung <br> ermöglicht. Menschen, 
     die aus dem In- und Ausland nach Eschbron kommen, sollen die Möglichkeit bekommen, am Stadtleben teilzuhaben. Wir bieten daher Informationen und Dienste zu <br> folgenden Themen an Ukraine-Hilfe, 
     Flüchtiligsarbeitskreis, Ausländerbeirat, Spreachangebote und viles mehr. Für weitere Informationen klickt bitte  
-    <a href="https://www.eschborn.de/leben-in-eschborn/gesellschaft-soziales-familie/mitbuerger-auslaendischer-herkunft">hier</a> <br>
-    <span class ="ueberschrift4">Wohnen, Planen & Bauen</span>  <br>
+    <a href="https://www.eschborn.de/leben-in-eschborn/gesellschaft-soziales-familie/mitbuerger-auslaendischer-herkunft">hier</a> <br><br>
+    <span class ="ueberschrift1">Wohnen, Planen & Bauen</span>  <br>
     In den zwei Stadteilen Eschborn und Niederhöchstadt kann man Fachwerkhäuser und auch moderne Wohngebäude vorfinden. Auch im Gewerbegebiet Eschborn-Süd mit den modernen Büro- <br>gebäuden kann verfolgt werden,
     wie sich die Stadt im Laufe der letzten Jahre der architektonischen Entwicklung angepasst hast. Eschborn ist deshalb so beliebt, weil zuzüglich auch noch die <br> Nähe zum Taunus und zum Grünen im Generellen sie
     so lebenswert macht. Daher wohnen viele Menschen und weitere zieht es nach Eschborn an.Bebauungspläne und Bodenrichtwerte der Stadt <br>Eschborn: Link zu den Bebauungsplänen findest du 
     <a href="https://www.eschborn.de/wirtschaft/publikationen-downloads/bebauungsplaene-bodenrichtwerte"> hier</a>  
     Bauprojekte:Regionaltangente West: Die RTW ist eine Regionalstadtbahn-Linie im S-Bahnnetz des Rhein-Main-Gebietes. Der Vorteil <br> des Vorhabens ist, dass tangentiale Verbindungen zwischen den Linien geschafft
-    werden. So entfällt das Umsteigen in Frankfurt und Reisezeiten werden verkürzt.Neubau Wiesenbad: Das <br>Schimmbad Eschborner wird um Indoor-Becken mit 50 m Länge erweitert. <br>
-    <span class ="ueberschrift5">Umwelt & Klima</span>  <br>
+    werden. So entfällt das Umsteigen in Frankfurt und Reisezeiten werden verkürzt.Neubau Wiesenbad: Das <br>Schimmbad Eschborner wird um Indoor-Becken mit 50 m Länge erweitert. <br><br>
+    <span class ="ueberschrift1">Umwelt & Klima</span>  <br>
     Das 2014 verabschiedete Integrierte kommunale Klimaschutzkonzept ist Grundlage einer klimafreundlicheren und nachhaltigeren wirtschaftlichen Entwicklung der Stadt und hat dazu <br> geführt, diese Ziele in den 
-    Zuständigkeitsbereichen der Verwaltung festzuhalten. Damit dies auch umgesetzt wird, wurde die Position des Klimaschutzmanager geschaffen. <br>
-    <span class ="ueberschrift6">Gesundheit</span>  <br> 
+    Zuständigkeitsbereichen der Verwaltung festzuhalten. Damit dies auch umgesetzt wird, wurde die Position des Klimaschutzmanager geschaffen. <br><br>
+    <span class ="ueberschrift1">Gesundheit</span>  <br> 
     Du benötigst einen Arzt oder möchtest wissen, wo sich die Apotheken in eschborn befinden? Ein Arztverzeichnis ist<a href="https://www.gelbeseiten.de/branchen/arzt/eschborn%20taunus"> hier</a>
     Die Eschborner Apotheken sind <a href="https://www.gelbeseiten.de/branchen/apotheke/eschborn%20taunus"> hier gelistet </a> 
     . Das zuständige <br> Gesundheitsamt befindet sich in Hofheim.  Tel: 06192 201-0 Fax: 06192 201-1731 E-Mail: <a href= "mailto: gesundheitsamt@mtk.org">gesundheitsamt@mtk.org</a>
