--- a/Rathaus.html
+++ b/Rathaus.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simons Eschborn Rathaus</title>
     <link href="styleRathaus.css" rel="stylesheet">
 </head>
 <body>
     <body><u><center><h1>Rathaus</h1></center></u> <br>  
     <img src="./Rathaus.jpeg"width=450px height="250px" align="right">
-    <span class ="ueberschrift">Wissenswertes zur Verwaltung & Politik</span> <br>
-  <span class ="ueberschrift2">Auf einen Blick - Wichtige Kontakte</span> <br>
+    <span class ="ueberschrift0">Wissenswertes zur Verwaltung & Politik</span> <br><br>
+  <span class ="ueberschrift1">Auf einen Blick - Wichtige Kontakte</span> <br>
   Rathaus Rathausplatz 3665760 Eschborn Telefon: 06196/490-0Mail: <a href= "mailto: info@eschborn.de">info@eschborn.de</a> + I3 Empfang: Montag, Dienstag, Donnerstag 8 - 16 Uhr und Mittwoch 8 - 18 Uhr, Freitag 8 - 12 Uhr Dienstleistungszentrum 
   (Bauhof) Graf-Zeppelin-Straße 5-765760 Eschborn Telefon: 06196 - 490-501 Mail: <a href= "mailto: bauen@eschborn.de">bauen@eschborn.de</a> Öffnungszeiten: Montag-Freitag 08.00 - 12.00 Uhr, Mittwoch 15.00 - 16.30 Uhr Annahme Grünabfälle: Montag,
    Dienstag und Donnerstag 7:30-15:30, Mittwoch 7:30-17:30 und Freitag 7:30-12:00 <a href="https://eschborn.mein-abfallkalender.online">Abfallkalender</a> Standesamt E-Mail: 
-   <a href= "mailto: standesamt@eschborn.de">standesamt@eschborn.de</a> Telefon: 06196/490-205. <br>
-   <span class ="ueberschrift3">Bürgerservice</span><br>
+   <a href= "mailto: standesamt@eschborn.de">standesamt@eschborn.de</a> Telefon: 06196/490-205. <br><br>
+   <span class ="ueberschrift1">Bürgerservice</span><br>
    Bürgerbüro (Services zum Einwohnermeldewesens) Unterortstraße 27A E-Mail: <a href= "mailto: buergerbuero@eschborn.de">buergerbuero@eschborn.de</a>Telefon: 06196/490-999 Öffnungszeiten BürgerbüroMontag: 8-12 Uhr und 13-16 Uhr Dienstag: 8-12 Uhr Mittwoch: 8-12 Uhr 
    und 14-18 Uhr Donnerstag: 8-12 Uhr Freitag: 8-12 Uhr Jeden 1. Samstag im Monat: 9-13 Uhr Öffnungszeiten Verwaltungsstelle NiederhöchstadtDienstag: 8 bis 13 Uhr Donnerstag: 10 bis 15 Uhr Öffnungszeiten 
    Verwaltungsstelle Niederhöchstadt: Dienstag 8 - 13 Uhr und Donnerstag 10 - 15 Uhr Dienstleistungen & Services der Stadt/Behörden sind über den A-Z Katalog zu finden: Hier klicken bitte! Zuständigkeiten der
     Fachdienste Servicekatalog A bis Z
     <hr>
     <img src="./Rathaus2.jpg"width=450px height="250px" align="left">
-    <span class ="ueberschrift4">Politik & Gremien</span> <br>
+    <span class ="ueberschrift1">Politik & Gremien</span> <br>
     Magistrat ist die laufende Verwaltung der Stadt und hat folgende Mitglieder: Karlheinz Gritsch (CDU), Stadtrat (Dezernat III - Brandschutz) Helmut Bauch (FWE), Stadtrat (Dezernat IV - Seniorenarbeit) 
     Markus Depping (CDU), Stadträtin Dr. Annette Christoph (FDP), Stadtrat Adolf Kannengießer (SPD), Stadträtin Monika Reckhard (Grüne), Stadträtin Jutta Rümann-Heller (CDU), Stadtrat Dr. Willi Schnorpfeil (Grüne), 
     Stadtrat Wolfram Schuster (CDU), Stadträtin Susanne Sievers (Die Linke), Stadtrat Thomas Spriegel (FDP), Stadtrat Bernd Wilhelm (SPD), Stadtrat. Die Stadtverordnetenversammlung ist das oberste Organ der Gemeinde
@@ -34,8 +34,8 @@
     zu beraten. Mitglieder: Massimiliano Agosta (Vorsitzender), Jozef Burda (stellvertretender Vorsitzender), Nandini Narayan, Maricela Mejia Buezo, Sayed Djawid Athar (ehem. Mitglied), Marian Torba. In Eschborn
     gibt es 2 Kinderbeiräte (für Eschborn bzw. Niederhöchstadt). Die Mitglieder werden von den örtlichen Schulen benannt und besuchen dort in der Regel die Klassen 3 bis 6. Weitere Infos auf der Seite des
     Kinderbeirates. Der Jugendbeirat hat 18 Mitglieder, die von der Heinrich-von-Kleist-Schule, dem Ausländerbeirat, dem Jugendzentrum, dem Café Perplex und den Kirchen-gemeinden benannt werden. Mehr Infos findet
-    ihr unter <a href="http://www.jugendbeirat-eschborn.de">www.jugendbeirat-eschborn.de</a> <br>
-    <span class ="ueberschrift5"> Karriere</span> <br>
+    ihr unter <a href="http://www.jugendbeirat-eschborn.de">www.jugendbeirat-eschborn.de</a> <br><br>
+    <span class ="ueberschrift1">Karriere</span> <br>
     Zu den Stellenausschreibungen <a href="https://www.eschborn.de/rathaus/verwaltung/stellenausschreibungen"> bitte hier klicken</a>
     Zu den Ausbildungsmöglichkeiten bei der Stadt <a href=" https://www.eschborn.de/rathaus/verwaltung/stellenausschreibungen/ausbildung">bitte hier klicken</a> 
     
