--- a/Stadtportrait.html
+++ b/Stadtportrait.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simons Eschborn Stadtportrait</title>
     <link href="styleStadtportrait.css" rel="stylesheet">
 </head>
 <body><u><center><h1>Stadtportrait</h1></center></u> <br> 
